# invenio-communities

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  python-app.yml  tests.yml
.tx/: config
docs/: api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
examples/: app.py
invenio_communities/: __init__.py  admin.py  api.py  bundles.py  cli.py  config.py  email.py  errors.py  ext.py  fetchers.py  finalize_app.py  forms.py  generators.py  helpers.py  indexer.py  links.py  minters.py  models.py  permission_loaders.py  permissions.py  proxies.py  receivers.py  roles.py  searchapp.py  signals.py  tasks.py  token.py  utils.py  version.py  views.py  webpack.py
invenio_communities/admin/: __init__.py
invenio_communities/administration/: __init__.py  communities.py  featured.py
invenio_communities/alembic/: 02cd82910727_update_role_id_type_upgrade.py  1777209602_removed_index_by_file_id_added_indices_.py  2d9884d0e3fa_create_community_tables.py  37b21951084c_update_role_id_type_downgrade.py  5b478fe7ef7f_create_featured_communities_table.py  5c68d45c80f0_add_deletion_status_to_communities.py  653a857d84c9_renaming_foreign_keys_in_communities.py  72b37bb4119c_create_indeces_for_bucket_id.py  90642d415317_create_communities_branch.py  __init__.py  a0f01ee61a5f_create_communities_members_table.py  a3f5a8635cbb_remove_version_table.py  a4df1e08b41e_create_communities_members_table.py  c3feb26c7041_change_datetime_types.py  de9c14cbb0b2_create_communities_tables.py  dfbc96c5211f_add_group_notification_preference.py  f261e5ee8743_create_communities_members_table.py  f701a32e6fbe_create_communities_members_table.py  fbe746957cfc_create_member_tables.py
invenio_communities/cache/: __init__.py  cache.py  redis.py
invenio_communities/communities/: __init__.py  components.py  entity_resolvers.py  links.py  permissions.py  resolver.py  resource.py  resource_config.py  results.py  schema.py  search.py  searchconfig.py  service.py  service_config.py  views.py
invenio_communities/communities/dumpers/: __init__.py  community_theme.py  featured.py
invenio_communities/communities/records/: __init__.py  api.py  models.py  providers.py
invenio_communities/communities/resources/: __init__.py  args.py  config.py  resource.py  serializer.py  ui_schema.py
invenio_communities/communities/services/: __init__.py  components.py  config.py  customizations.py  facets.py  links.py  permissions.py  results.py  search_params.py  service.py  sort.py  uow.py
invenio_communities/fixtures/: __init__.py  __init__py  demo.py  tasks.py  users.py
invenio_communities/invitations/: __init__.py  errors.py
invenio_communities/invitations/resources/: __init__.py  config.py  resource.py
invenio_communities/invitations/services/: __init__.py  actions.py  common.py  config.py  permissions.py  request_types.py  schemas.py  service.py
invenio_communities/jsonschemas/: __init__.py
invenio_communities/jsonschemas/communities/: communities-v1.0.0.json  record-v1.0.0.json
invenio_communities/loaders/: __init__.py  marshmallow.py
invenio_communities/mappings/v7/: __init__.py
invenio_communities/marshmallow/: __init__.py  json.py
invenio_communities/members/: __init__.py  api.py  errors.py  models.py  permissions.py  views.py
invenio_communities/members/records/: __init__.py  api.py  dumpers.py  models.py
invenio_communities/members/resources/: __init__.py  config.py  resource.py
invenio_communities/members/services/: __init__.py  components.py  config.py  facets.py  fields.py  links.py  operations.py  permissions.py  request.py  schema.py  (+2 more)
invenio_communities/notifications/: __init__.py  builders.py  generators.py
invenio_communities/records/: __init__.py  api.py  errors.py  indexer.py  models.py  permissions.py  views.py
invenio_communities/requests/: __init__.py  api.py  models.py  resolver.py
invenio_communities/serializers/: __init__.py  response.py
invenio_communities/subcommunities/: __init__.py
invenio_communities/translations/: messages.pot
invenio_communities/upgrades/: communities_2014_03_07_ranker.py  communities_2014_10_17_featured_communities.py  communities_2015_01_26_community_team.py
invenio_communities/views/: __init__.py  api.py  communities.py  decorators.py  manage.py  settings.py  template_loader.py  ui.py
tests/: __init__.py  conftest.py  no_test_cli.py  test_alembic.py  test_communities.py  test_community_team.py  test_featured_community.py  test_invenio_communities.py  test_models.py  test_notifications.py  test_permissions.py  test_tasks.py  test_utils.py  test_views.py
tests/api/: conftest.py  test_core_api.py
tests/cache/: __init__.py  test_identity_redis_cache.py
tests/communities/: __init__.py  conftest.py  test_alembic.py  test_cli.py  test_collections_permissions.py  test_community_ui_serializer.py  test_components.py  test_parent_community.py  test_permissions.py  test_relations_organizations.py  test_relations_types.py  test_resources.py  test_safelist.py  test_service.py  test_services.py  test_subcommunities.py  test_tombstone.py  test_ui.py  tests_views.py
tests/members/: __init__.py  conftest.py  test_members_components.py  test_members_group_notifications.py  test_members_group_notifications_resource.py  test_members_no_groups.py  test_members_notifications.py  test_members_resource.py  test_members_services.py  test_members_views.py
tests/memberships/: conftest.py  test_invitations_permissions.py  test_invitations_resource.py  test_invitations_rules.py  test_members_permissions.py  test_members_resource.py  test_members_views.py  test_membership_services.py
tests/mock_module/: __init__.py
tests/records/: __init__.py  conftest.py  test_mockrecords_api.py  test_records_views.py
(+648 files in other folders)
