# SPDX-FileCopyrightText: 2016-2025 CERN.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2022 Northwestern University.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-communities"
description = "InvenioRDM module for the communities feature."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "communities",
  "invenio",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "invenio-administration>=7.0.0,<8.0.0",
  "invenio-collections>=10.0.0,<11.0.0",
  "invenio-oaiserver>=6.0.0,<7.0.0",
  "invenio-records-resources>=11.0.0,<12.0.0",
  "invenio-requests>=15.0.0,<16.0.0",
  "invenio-search-ui>=5.0.0,<6.0.0",
  "invenio-vocabularies>=14.0.0,<15.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-communities"

[project.entry-points."flask.commands"]
communities = "invenio_communities.cli:communities"
identity-cache = "invenio_communities.cli:identity_cache"

[project.entry-points."invenio_administration.views"]
invenio_communities_details = "invenio_communities.administration.communities:CommunityDetailView"
invenio_communities_list = "invenio_communities.administration.communities:CommunityListView"

[project.entry-points."invenio_assets.webpack"]
invenio_communities = "invenio_communities.webpack:communities"

[project.entry-points."invenio_base.api_apps"]
invenio_communities = "invenio_communities:InvenioCommunities"

[project.entry-points."invenio_base.api_blueprints"]
invenio_communities_api = "invenio_communities.views:create_communities_api_blueprint"
invenio_communities_ext = "invenio_communities.views:blueprint"
invenio_communities_members_api = "invenio_communities.views:create_members_api_bp_from_app"
invenio_communities_subcommunities_api = "invenio_communities.views:create_subcommunities_api_blueprint"

[project.entry-points."invenio_base.api_finalize_app"]
invenio_communities = "invenio_communities.ext:api_finalize_app"

[project.entry-points."invenio_base.apps"]
invenio_communities = "invenio_communities:InvenioCommunities"

[project.entry-points."invenio_base.blueprints"]
invenio_communities = "invenio_communities.views:create_ui_blueprint"
invenio_communities_ext = "invenio_communities.views:blueprint"

[project.entry-points."invenio_base.finalize_app"]
invenio_communities = "invenio_communities.ext:finalize_app"

[project.entry-points."invenio_celery.tasks"]
invenio_communities = "invenio_communities.tasks"
invenio_communities_fixtures = "invenio_communities.fixtures.tasks"
invenio_communities_user_moderation = "invenio_communities.requests.user_moderation.tasks"

[project.entry-points."invenio_db.alembic"]
invenio_communities = "invenio_communities:alembic"

[project.entry-points."invenio_db.models"]
invenio_communities = "invenio_communities.communities.records.models"
invenio_communities_members = "invenio_communities.members.records.models"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_communities"

[project.entry-points."invenio_jsonschemas.schemas"]
communities = "invenio_communities.communities.records.jsonschemas"

[project.entry-points."invenio_requests.entity_resolvers"]
communities = "invenio_communities.communities.entity_resolvers:CommunityResolver"

[project.entry-points."invenio_requests.types"]
community_invitation = "invenio_communities.members.services.request:CommunityInvitation"
membership_request_request_type = "invenio_communities.members.services.request:MembershipRequestRequestType"
subcommunity = "invenio_communities.subcommunities.services.request:subcommunity_request_type"
subcommunity_invitation = "invenio_communities.subcommunities.services.request:subcommunity_invitation_request_type"

[project.entry-points."invenio_search.mappings"]
communities = "invenio_communities.communities.records.mappings"
communitymembers = "invenio_communities.members.records.mappings"

[project.entry-points."invenio_users_resources.moderation.actions"]
approve = "invenio_communities.requests.user_moderation.actions:on_approve"
block = "invenio_communities.requests.user_moderation.actions:on_block"
restore = "invenio_communities.requests.user_moderation.actions:on_restore"

[project.optional-dependencies]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "faker>=2.0.3",
  "invenio-app>=3.0.0,<4.0.0",
  "invenio-db[postgresql,mysql]>=2.2.0,<3.0.0",
  "pendulum>=3.2.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_communities/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_communities/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_communities/translations/messages.pot"
output_dir = "invenio_communities/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_communities/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_communities",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_communities --cov-report=term-missing'
filterwarnings = ["ignore::marshmallow.warnings.RemovedInMarshmallow4Warning"]
testpaths = "tests invenio_communities"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
  ]
]
